# Genecyzer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: Bezier.cpp  BitConverter.cpp  CachedTile.cpp  ChrFont.cpp  ChrFont.hpp  Effect.cpp  Font.cpp  Font.hpp  Instance.cpp  Instance.hpp  Instrument.cpp  Instrument.hpp  ModularSynth.cpp  Project.cpp  RIFF.cpp  RIFF.hpp  RIFFLoader.cpp  Song.cpp  StrConvert.cpp  StrConvert.hpp  TextRenderer.cpp  Tile.cpp  Tile.hpp  Tracker.cpp  Utils.cpp  Var16.cpp  binIncludes.cpp  binIncludes.cpp.in  chrLoad.cpp  main.cpp
src/Renderer/: InstrumentRenderer.cpp  TrackerRenderer.cpp
tests/: RIFFTest.cpp  bitConvTest.cpp  testFile.gczr
